fix form spacings

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -888,7 +888,11 @@ RSVP form
       margin-bottom: 10px;
 
       .panel-body {
-        padding: 10px;
+        padding: 10px 10px 0;
+      }
+
+      textarea {
+        margin-bottom: 10px;
       }
     }
     textarea {
